--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ function loop() {
 	// lighter creates bright highlight points as the fireworks and particles overlap each other
 	ctx.globalCompositeOperation = 'lighter';
 	
-    var text = "HAPPY BIRTHDAY CUNZHER !!";  
+    var text = "HAPPY BIRTHDAY  郭小姐 !!";  
   ctx.font = "50px sans-serif";
   var textData = ctx.measureText(text);
   ctx.fillStyle = "rgba("+parseInt(random(0,255))+","+parseInt(random(0,255))+","+parseInt(random(0,255))+",0.3)";
